
[TestExecuteShowsHelp - 1]
██╗  ██╗███████╗ █████╗ ██╗██╗
██║ ██╔╝██╔════╝██╔══██╗██║██║
█████╔╝ ███████╗███████║██║██║
██╔═██╗ ╚════██║██╔══██║██║██║
██║  ██╗███████║██║  ██║██║███████╗
╚═╝  ╚═╝╚══════╝╚═╝  ╚═╝╚═╝╚══════╝

CLI tool for operating Kubernetes

Usage:
  ksail [flags]
  ksail [command]

Available Commands:
  chat        Start an AI-assisted chat session
  cipher      Manage encrypted files with SOPS
  cluster     Manage cluster lifecycle
  completion  Generate the autocompletion script for the specified shell
  desktop     Open the KSail desktop application
  help        Help about any command
  mcp         Start an MCP server
  tenant      Manage tenant lifecycle
  ui          Open the KSail web UI to manage local clusters
  workload    Manage workload operations

Flags:
      --benchmark       Show per-activity benchmark output
      --config string   Path to config file (default: ksail.yaml found via directory traversal)
  -h, --help            help for ksail
  -v, --version         version for ksail

Use "ksail [command] --help" for more information about a command.

---

[TestExecuteShowsHelpFlag - 1]
CLI tool for operating Kubernetes

Usage:
  ksail [flags]
  ksail [command]

Available Commands:
  chat        Start an AI-assisted chat session
  cipher      Manage encrypted files with SOPS
  cluster     Manage cluster lifecycle
  completion  Generate the autocompletion script for the specified shell
  desktop     Open the KSail desktop application
  help        Help about any command
  mcp         Start an MCP server
  tenant      Manage tenant lifecycle
  ui          Open the KSail web UI to manage local clusters
  workload    Manage workload operations

Flags:
      --benchmark       Show per-activity benchmark output
      --config string   Path to config file (default: ksail.yaml found via directory traversal)
  -h, --help            help for ksail
  -v, --version         version for ksail

Use "ksail [command] --help" for more information about a command.

---

[TestExecuteShowsVersion - 1]
ksail version 1.2.3 (Built on 2025-08-17 from Git SHA abc123)

---

[TestExecuteWithNonexistentCommand - 1]
Error: unknown command "nonexistent" for "ksail"
Run 'ksail --help' for usage.

---
